update index.html after falgger init

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
           (Tip: JenkinsX - you can change your vote)
         </div>
         <div id="hostname">
-          Processed by container ID {{hostname}}
+          Processed by Jenkins X container ID {{hostname}}
         </div>
       </div>
     </div>
