--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (Tip: JenkinsX - you can change your vote)
+          (Tip: JenkinsX - voting-vote v0.0.5 - you can change your vote)
         </div>
         <div id="hostname">
           Processed by Jenkins X container ID {{hostname}}
