--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (Tip: JenkinsX - voting-vote v0.0.5 - you can change your vote)
+          (Tip: JenkinsX - voting-vote v0.0.6 - you can change your vote)
         </div>
         <div id="hostname">
-          Processed by Jenkins X container ID {{hostname}}
+          Processed by Jenkins X - voting-vote v0.0.6 container ID {{hostname}}
         </div>
       </div>
     </div>
